--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generalnie-naturalnie",
+  "name": "Akash Bhandari",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
